Bug 154339 - Plain text copied to clipboard and pasted to CSV is not saved.
Summary: Plain text copied to clipboard and pasted to CSV is not saved.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.1.2 release
Hardware: All All
: highest major
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords: bibisected, bisected, dataLoss, regression
: 158218 158698 158916 (view as bug list)
Depends on:
Blocks: CSV
  Show dependency treegraph
 
Reported: 2023-03-23 10:43 UTC by Eugene
Modified: 2023-12-29 08:05 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene 2023-03-23 10:43:41 UTC
Description:
When you open a CSV file in Calc and paste copied text or numbers to the clipboard, even if you save the file the changes are not saved.
For example, you copy values from Windows Notepad and paste them with Calc into an already created CSV.
You save changes and when you open the CSV file again the values are not added.

Steps to Reproduce:
1.Opening a CSV file with Calc
2.Copy values in a Notepad
3.Paste copied values into the CSV and save changes.

Actual Results:
Changes are not saved.

Expected Results:
The changes must be saved.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: es
Module: SpreadsheetDocument
OS: Windows 10 Pro 22H2
OS is 64bit: Yes
Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: es-ES
Calc: CL threaded
Comment 1 ady 2023-03-23 12:36:07 UTC
Repro in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b5c3a7502f7ff6ccf0f829c1f3a2ba50b8584c41
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (es_AR); UI: en-US
Calc: CL threaded
Built 2023-03-19

Not repro in 7.4.6. Regression.

Data Loss!
Comment 2 raal 2023-03-24 19:25:51 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.5.
Adding Cc: to Szymon Kłos ; Could you possibly take a look at this one?
Thanks
 29b93aade4ccf9750fd9409196e0a4921b4804eb is the first bad commit
commit 29b93aade4ccf9750fd9409196e0a4921b4804eb
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Nov 21 14:50:28 2022 +0100

    source 0a55aa8ba38aea56a2bce1504fd687e510f66b9d

142995: calc: cache GetCellArea results | https://gerrit.libreoffice.org/c/core/+/142995
Comment 3 Buovjaga 2023-11-28 13:08:46 UTC
*** Bug 158218 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2023-12-05 12:24:23 UTC
This issue is also reproduced on linux

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 84927c0bc349e774ab363f9a20b61a5e22a12802
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

Steps to reproduce:
1. Open Calc
2. Writer something in C5
3. Save as CSV
4. Go to Writer, write 'hello' and copy it
5. Go to C8 paste and save

-> 'hello' is not saved
Comment 5 Xisco Faulí 2023-12-05 13:15:02 UTC
My take on it: https://gerrit.libreoffice.org/c/core/+/160349
Comment 6 m_a_riosv 2023-12-14 16:21:22 UTC
*** Bug 158698 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2023-12-19 12:52:28 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/09ec97405a6097c0db6ff9dc2aaac263dcd0d718

tdf#154339: do not cache GetCellArea results for now

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-12-19 17:55:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/08009002625ec20788d0c6d55aaa32aeac416753

tdf#154339: do not cache GetCellArea results for now

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 ady 2023-12-19 19:06:51 UTC
(In reply to Xisco Faulí from comment #5)
> My take on it: https://gerrit.libreoffice.org/c/core/+/160349

(In reply to Commit Notification from comment #7)
> <https://git.libreoffice.org/core/commit/09ec97405a6097c0db6ff9dc2aaac263dcd0d718>
> 
> tdf#154339: do not cache GetCellArea results for now

Considering 
https://gerrit.libreoffice.org/c/core/+/142279

and that there is no effective feedback from Szymon, and the importance for users and normal workflow of this problem, I believe Dennis Francis should also be CC'ed to bug 154339. Doing so.
Comment 10 Xisco Faulí 2023-12-21 15:15:26 UTC
I guess we can close it now
Comment 11 ady 2023-12-29 02:21:11 UTC
*** Bug 158916 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2023-12-29 08:05:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/dfd115ac6a7ad5e1ef12909933ca658205680c49

tdf#154339: do not cache GetCellArea results for now

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.