tdf#154339: do not cache GetCellArea results for now

Partially revert 0a55aa8ba38aea56a2bce1504fd687e510f66b9d
"calc: cache GetCellArea results"

Change-Id: I371a56f64afe541d9a194e6435fda3fb27bc43ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160349
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>